# Analise_de_Vendas_Loja_Ficticia

./: README.md  main.py  mkdocs.yml  pyproject.toml
data/processed/: vendas_consolidadas.xlsx
data/raw/: 01-01-2015.xlsx  02-01-2015.xlsx  03-01-2015.xlsx  04-01-2015.xlsx  05-01-2015.xlsx  06-01-2015.xlsx  07-01-2015.xlsx  08-01-2015.xlsx  09-01-2015.xlsx  10-01-2015.xlsx  11-01-2015.xlsx  12-01-2015.xlsx  13-01-2015.xlsx  14-01-2015.xlsx  15-01-2015.xlsx  16-01-20215.xlsx  17-01-2025.xlsx  18-01-2015.xlsx  19-01-2015.xlsx  20-01-2015.xlsx  21-01-2015.xlsx  22-01-2025.xlsx  23-01-2015.xlsx  24-01-2015.xlsx  25-01-2015.xlsx  26-01-2015.xlsx  27-01-2015.xlsx  28-01-2015.xlsx  29-01-2015.xlsx  30-01-2015.xlsx  31-01-2015.xlsx
docs/: index.md
src/app/: __init__.py  main.py
src/app/pipeline/: __init__.py  extract.py  load.py  transform.py
tests/: __init__.py  test_pipeline.py
