[project]
name = "analise-vendas-loja-ficticia"
version = "0.1.0"
description = ""
authors = [
    {name = "Frederico Sander",email = "sanderfn@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings-python (>=1.16.12,<2.0.0)",
    "pygments (>=2.19.2,<3.0.0)",
    "mkdocs-material (>=9.6.15,<10.0.0)",
    "pymdown-extensions (>=10.16,<11.0)",
    "mkdocs-bootstrap386 (>=0.0.2,<0.0.3)"
]

[tool.poetry]
packages = [{include = "analise_vendas_loja_ficticia", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && black ."
test = "poetry run pytest -v"
run = "python3 app/main.py"
kill = "Kill -9 $(lsof -t -i :8000)"
